force-app/main/default/objects/Fuel_Order_Item__c/Fuel_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Fuel Order Item</label>
    <nameField>
        <label>Fuel Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fuel Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>