force-app/main/default/objects/Fuel_Order_Item__c/fields/Post_Delivery_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Post_Delivery_Meter_Reading__c</fullName>
    <label>Post-Delivery Meter Reading</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>