force-app/main/default/objects/Fuel_Order_Item__c/fields/Pre_Delivery_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Pre_Delivery_Meter_Reading__c</fullName>
    <label>Pre-Delivery Meter Reading</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>