force-app/main/default/objects/Fuel_Order_Item__c/fields/Seal_Number_End__c.field-meta.xml
<CustomField>
    <fullName>Seal_Number_End__c</fullName>
    <label>Seal Number (End)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>