force-app/main/default/objects/Fuel_Order_Item__c/fields/Tank_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Tank_Access_Code__c</fullName>
    <label>Tank Access Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>