force-app/main/default/objects/Fuel_Order_Item__c/fields/Target_Tank__c.field-meta.xml
<CustomField>
    <fullName>Target_Tank__c</fullName>
    <label>Target Tank</label>
    <referenceTo>Tank__c</referenceTo>
    <relationshipLabel>Fuel Order Items</relationshipLabel>
    <relationshipName>Fuel_Order_Items</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>